actix-web-codegen/tests/trybuild/routes-missing-method-fail.stderr
error: The #[routes] macro requires at least one `#[<method>(..)]` attribute.
 --> tests/trybuild/routes-missing-method-fail.rs:3:1
  |
3 | #[routes]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `routes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn() -> impl std::future::Future {index}: HttpServiceFactory` is not satisfied
  --> tests/trybuild/routes-missing-method-fail.rs:12:55
   |
12 |     let srv = actix_test::start(|| App::new().service(index));
   |                                               ------- ^^^^^ the trait `HttpServiceFactory` is not implemented for `fn() -> impl std::future::Future {index}`
   |                                               |
   |                                               required by a bound introduced by this call
